// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EmailSignupModal component renders correctly 1`] = `
<Fragment>
  <Styled(Modal)
    aria={
      Object {
        "describedby": "sign-up-modal-form-intro-view",
      }
    }
    className=""
    closeIconDataLocator="email_signup_modal_close_btn"
    colSet={
      Object {
        "large": 8,
        "medium": 6,
        "small": 6,
      }
    }
    contentLabel="undefined undefined"
    contentRef={[Function]}
    heightConfig={
      Object {
        "height": "645px",
        "maxHeight": "645px",
        "minHeight": "500px",
      }
    }
    isOpen={false}
    noPadding={true}
    onRequestClose={[Function]}
    overlayClassName="TCPModal__Overlay"
    widthConfig={
      Object {
        "large": "851px",
        "medium": "458px",
        "small": "100%",
      }
    }
  >
    <form>
      <Styled(Grid)>
        <Styled(Row)
          className="wrapper"
          fullBleed={
            Object {
              "large": true,
            }
          }
        >
          <Styled(Col)
            className="img-wrapper"
            colSize={
              Object {
                "large": 4,
                "medium": 4,
                "small": 4,
              }
            }
            hideCol={
              Object {
                "medium": true,
                "small": true,
              }
            }
            isNotInlineBlock={true}
          >
            <WithTheme(DamImage)
              imgConfigs={
                Array [
                  "t_emailSignUp_img_m",
                  "t_emailSignUp_img_t",
                  "t_emailSignUp_img_d",
                ]
              }
              imgData={
                Object {
                  "alt": undefined,
                  "url": undefined,
                }
              }
            />
          </Styled(Col)>
          <Styled(Col)
            colSize={
              Object {
                "large": 8,
                "medium": 8,
                "small": 6,
              }
            }
          >
            <Styled(SignupFormIntro)
              formViewConfig={Object {}}
            />
            <Styled(Col)
              className="field-container"
              colSize={
                Object {
                  "large": 10,
                  "medium": 6,
                  "small": 6,
                }
              }
              offsetLeft={
                Object {
                  "large": 1,
                  "medium": 1,
                  "small": 0,
                }
              }
            >
              <Field
                component={
                  Object {
                    "$$typeof": Symbol(react.forward_ref),
                    "attrs": Array [],
                    "componentStyle": ComponentStyle {
                      "componentId": "sc-dnqmqq",
                      "isStatic": false,
                      "rules": Array [
                        "
  ",
                        "
  position: relative;
  display: block;

  .TextBox__label {
    font-size: ",
                        [Function],
                        "px;
    padding: 0;
    position: absolute;
    top: ",
                        [Function],
                        ";
    ",
                        [Function],
                        "
  }

  .TextBox__input {
    margin: 0;
    outline: 0;
    font-size: ",
                        [Function],
                        "px;
    color: ",
                        [Function],
                        ";
    width: 100%;
    background-position: left top;
    background-repeat: no-repeat;
    background-size: contain;
    border: 0 solid transparent;
    border-bottom: 1px solid ",
                        [Function],
                        ";
    padding-bottom: ",
                        [Function],
                        ";
    margin-bottom: ",
                        [Function],
                        ";
    padding-top: ",
                        [Function],
                        ";

    ",
                        [Function],
                        "

    ",
                        [Function],
                        ";

    &:focus + .TextBox__label {
      font-size: ",
                        [Function],
                        "px;
      font-weight: ",
                        [Function],
                        ";
      top: ",
                        [Function],
                        ";
    }
  }
  .success__checkmark {
    display: none;
  }
  &.textbox_validation_success .TextBox__input {
    border-bottom: 1px solid ",
                        [Function],
                        ";
  }

  &.textbox_validation_success .success__checkmark {
    display: ",
                        [Function],
                        ";
    width: 15px;
    height: 8px;
    margin-left: ",
                        [Function],
                        ";
    transform: rotate(-45deg);
    transform-origin: left;
    position: absolute;
    right: 0;
    top: 30px;

    &:before {
      content: '';
      position: absolute;
      width: 3px;
      height: 100%;
      background-color: ",
                        [Function],
                        ";
    }

    &:after {
      content: '';
      position: absolute;
      width: 100%;
      height: 3px;
      background-color: ",
                        [Function],
                        ";
      bottom: 0;
    }
  }

  ",
                        [Function],
                        ";

  .TextBox__error {
    display: flex;
    flex-direction: row;
    padding-bottom: ",
                        [Function],
                        ";
  }
  .warning-icon {
    background: transparent url('/static/images/circle-alert-fill.svg') no-repeat 0 0;
    background-size: contain;
    border: none;
    height: 14px;
    width: 16px;
    margin-right: 7px;
  }
",
                        ";
",
                      ],
                    },
                    "displayName": "Styled(TextBox)",
                    "foldedComponentIds": Array [],
                    "render": [Function],
                    "styledComponentId": "sc-dnqmqq",
                    "target": [Function],
                    "toString": [Function],
                    "warnTooManyClasses": [Function],
                    "withComponent": [Function],
                  }
                }
                dataLocator="email_address_field"
                enableSuccessCheck={false}
                id="modal_signup"
                maxLength={50}
                name="signup"
                type="text"
              />
              <Field
                className="email-signup-second-brand"
                component={
                  Object {
                    "$$typeof": Symbol(react.forward_ref),
                    "attrs": Array [],
                    "componentStyle": ComponentStyle {
                      "componentId": "sc-jTzLTM",
                      "isStatic": false,
                      "rules": Array [
                        "
  ",
                        "
  display: block;
  align-items: ",
                        [Function],
                        ";

  & .CheckBox__input {
    flex: 0 0 auto;
    position: relative;
    top: 0;
    appearance: none;
    outline: 0;
    border: 0;
    height: ",
                        "25px",
                        ";
    width: ",
                        "25px",
                        ";
    margin: 0;
    margin-right: ",
                        [Function],
                        ";
    display: inline-block;
    vertical-align: top;
  }

  & .CheckBox__input:before {
    content: '';
    position: absolute;
    height: 100%;
    width: 100%;
    left: 0;
    border: 1px solid ",
                        [Function],
                        ";
  }

  & .CheckBox__input:checked:before {
    background: ",
                        [Function],
                        ";
    border: 1px solid ",
                        [Function],
                        ";
  }

  & .CheckBox__input:checked:after {
    transform: rotate(225deg);
    content: '';
    border: 2px solid ",
                        [Function],
                        ";
    font-size: ",
                        [Function],
                        "px;
    width: ",
                        [Function],
                        ";
    height: 10px;
    border-right: 0;
    border-bottom: 0;
    left: 10px;
    top: 5px;
    position: absolute;
  }

  & .CheckBox__text {
    width: calc(100% - 45px);
    display: inline-block;
    ",
                        [Function],
                        "
  }

  & .CheckBox__text a {
    color: ",
                        [Function],
                        ";
  }

  & .disabled {
    opacity: ",
                        [Function],
                        ";
  }

  & .Checkbox__error {
    display: flex;
    flex-direction: row;
    padding-left: ",
                        [Function],
                        ";
  }
  & .warning-icon {
    background: transparent url('/static/images/circle-alert-fill.svg') no-repeat 0 0;
    background-size: contain;
    border: none;
    height: ",
                        [Function],
                        ";
    width: ",
                        [Function],
                        ";
    margin-right: 4px;
    margin-top: 2px;
  }
  & #checkbox__error__iAgree {
    margin-top: 4px;
  }
",
                        ";
",
                      ],
                    },
                    "displayName": "Styled(InputCheckbox)",
                    "foldedComponentIds": Array [],
                    "render": [Function],
                    "styledComponentId": "sc-jTzLTM",
                    "target": [Function],
                    "toString": [Function],
                    "warnTooManyClasses": [Function],
                    "withComponent": [Function],
                  }
                }
                dataLocator="email_gym_opt"
                id="emailSignupSecondBrand"
                name="emailSignupSecondBrand"
                type="checkbox"
              />
              <Styled(BodyCopy)
                className="terms-label"
                color="text.primary"
                component="p"
                fontFamily="secondary"
                fontSize="fs12"
                fontWeight="regular"
                letterSpacing="normal"
                lineHeight="normal"
                link={null}
                textAlign="left"
              />
            </Styled(Col)>
            <Styled(Row)
              className="button-wrapper-form"
              fullBleed={true}
            >
              <Styled(Col)
                colSize={
                  Object {
                    "large": 6,
                    "medium": 4,
                    "small": 4,
                  }
                }
              >
                <Styled(Button)
                  buttonVariation="fixed-width"
                  className="join-button"
                  dataLocator="join_now_btn"
                  disabled={false}
                  fill="BLUE"
                  fullWidth={true}
                  type="submit"
                />
              </Styled(Col)>
            </Styled(Row)>
          </Styled(Col)>
        </Styled(Row)>
      </Styled(Grid)>
    </form>
  </Styled(Modal)>
</Fragment>
`;

exports[`EmailSignupModal component renders correctly when button is clicked 1`] = `
<Fragment>
  <Styled(Modal)
    aria={
      Object {
        "describedby": "sign-up-modal-form-intro-view",
      }
    }
    className=""
    closeIconDataLocator="email_signup_modal_close_btn"
    colSet={
      Object {
        "large": 8,
        "medium": 6,
        "small": 6,
      }
    }
    contentLabel="undefined undefined"
    contentRef={[Function]}
    heightConfig={
      Object {
        "height": "645px",
        "maxHeight": "645px",
        "minHeight": "500px",
      }
    }
    isOpen={true}
    noPadding={true}
    onRequestClose={[Function]}
    overlayClassName="TCPModal__Overlay"
    widthConfig={
      Object {
        "large": "851px",
        "medium": "458px",
        "small": "100%",
      }
    }
  >
    <form>
      <Styled(Grid)>
        <Styled(Row)
          className="wrapper"
          fullBleed={
            Object {
              "large": true,
            }
          }
        >
          <Styled(Col)
            className="img-wrapper"
            colSize={
              Object {
                "large": 4,
                "medium": 4,
                "small": 4,
              }
            }
            hideCol={
              Object {
                "medium": true,
                "small": true,
              }
            }
            isNotInlineBlock={true}
          >
            <WithTheme(DamImage)
              imgConfigs={
                Array [
                  "t_emailSignUp_img_m",
                  "t_emailSignUp_img_t",
                  "t_emailSignUp_img_d",
                ]
              }
              imgData={
                Object {
                  "alt": undefined,
                  "url": undefined,
                }
              }
            />
          </Styled(Col)>
          <Styled(Col)
            colSize={
              Object {
                "large": 8,
                "medium": 8,
                "small": 6,
              }
            }
          >
            <Styled(SignupFormIntro)
              formViewConfig={Object {}}
            />
            <Styled(Col)
              className="field-container"
              colSize={
                Object {
                  "large": 10,
                  "medium": 6,
                  "small": 6,
                }
              }
              offsetLeft={
                Object {
                  "large": 1,
                  "medium": 1,
                  "small": 0,
                }
              }
            >
              <Field
                component={
                  Object {
                    "$$typeof": Symbol(react.forward_ref),
                    "attrs": Array [],
                    "componentStyle": ComponentStyle {
                      "componentId": "sc-dnqmqq",
                      "isStatic": false,
                      "rules": Array [
                        "
  ",
                        "
  position: relative;
  display: block;

  .TextBox__label {
    font-size: ",
                        [Function],
                        "px;
    padding: 0;
    position: absolute;
    top: ",
                        [Function],
                        ";
    ",
                        [Function],
                        "
  }

  .TextBox__input {
    margin: 0;
    outline: 0;
    font-size: ",
                        [Function],
                        "px;
    color: ",
                        [Function],
                        ";
    width: 100%;
    background-position: left top;
    background-repeat: no-repeat;
    background-size: contain;
    border: 0 solid transparent;
    border-bottom: 1px solid ",
                        [Function],
                        ";
    padding-bottom: ",
                        [Function],
                        ";
    margin-bottom: ",
                        [Function],
                        ";
    padding-top: ",
                        [Function],
                        ";

    ",
                        [Function],
                        "

    ",
                        [Function],
                        ";

    &:focus + .TextBox__label {
      font-size: ",
                        [Function],
                        "px;
      font-weight: ",
                        [Function],
                        ";
      top: ",
                        [Function],
                        ";
    }
  }
  .success__checkmark {
    display: none;
  }
  &.textbox_validation_success .TextBox__input {
    border-bottom: 1px solid ",
                        [Function],
                        ";
  }

  &.textbox_validation_success .success__checkmark {
    display: ",
                        [Function],
                        ";
    width: 15px;
    height: 8px;
    margin-left: ",
                        [Function],
                        ";
    transform: rotate(-45deg);
    transform-origin: left;
    position: absolute;
    right: 0;
    top: 30px;

    &:before {
      content: '';
      position: absolute;
      width: 3px;
      height: 100%;
      background-color: ",
                        [Function],
                        ";
    }

    &:after {
      content: '';
      position: absolute;
      width: 100%;
      height: 3px;
      background-color: ",
                        [Function],
                        ";
      bottom: 0;
    }
  }

  ",
                        [Function],
                        ";

  .TextBox__error {
    display: flex;
    flex-direction: row;
    padding-bottom: ",
                        [Function],
                        ";
  }
  .warning-icon {
    background: transparent url('/static/images/circle-alert-fill.svg') no-repeat 0 0;
    background-size: contain;
    border: none;
    height: 14px;
    width: 16px;
    margin-right: 7px;
  }
",
                        ";
",
                      ],
                    },
                    "displayName": "Styled(TextBox)",
                    "foldedComponentIds": Array [],
                    "render": [Function],
                    "styledComponentId": "sc-dnqmqq",
                    "target": [Function],
                    "toString": [Function],
                    "warnTooManyClasses": [Function],
                    "withComponent": [Function],
                  }
                }
                dataLocator="email_address_field"
                enableSuccessCheck={false}
                id="modal_signup"
                maxLength={50}
                name="signup"
                type="text"
              />
              <Field
                className="email-signup-second-brand"
                component={
                  Object {
                    "$$typeof": Symbol(react.forward_ref),
                    "attrs": Array [],
                    "componentStyle": ComponentStyle {
                      "componentId": "sc-jTzLTM",
                      "isStatic": false,
                      "rules": Array [
                        "
  ",
                        "
  display: block;
  align-items: ",
                        [Function],
                        ";

  & .CheckBox__input {
    flex: 0 0 auto;
    position: relative;
    top: 0;
    appearance: none;
    outline: 0;
    border: 0;
    height: ",
                        "25px",
                        ";
    width: ",
                        "25px",
                        ";
    margin: 0;
    margin-right: ",
                        [Function],
                        ";
    display: inline-block;
    vertical-align: top;
  }

  & .CheckBox__input:before {
    content: '';
    position: absolute;
    height: 100%;
    width: 100%;
    left: 0;
    border: 1px solid ",
                        [Function],
                        ";
  }

  & .CheckBox__input:checked:before {
    background: ",
                        [Function],
                        ";
    border: 1px solid ",
                        [Function],
                        ";
  }

  & .CheckBox__input:checked:after {
    transform: rotate(225deg);
    content: '';
    border: 2px solid ",
                        [Function],
                        ";
    font-size: ",
                        [Function],
                        "px;
    width: ",
                        [Function],
                        ";
    height: 10px;
    border-right: 0;
    border-bottom: 0;
    left: 10px;
    top: 5px;
    position: absolute;
  }

  & .CheckBox__text {
    width: calc(100% - 45px);
    display: inline-block;
    ",
                        [Function],
                        "
  }

  & .CheckBox__text a {
    color: ",
                        [Function],
                        ";
  }

  & .disabled {
    opacity: ",
                        [Function],
                        ";
  }

  & .Checkbox__error {
    display: flex;
    flex-direction: row;
    padding-left: ",
                        [Function],
                        ";
  }
  & .warning-icon {
    background: transparent url('/static/images/circle-alert-fill.svg') no-repeat 0 0;
    background-size: contain;
    border: none;
    height: ",
                        [Function],
                        ";
    width: ",
                        [Function],
                        ";
    margin-right: 4px;
    margin-top: 2px;
  }
  & #checkbox__error__iAgree {
    margin-top: 4px;
  }
",
                        ";
",
                      ],
                    },
                    "displayName": "Styled(InputCheckbox)",
                    "foldedComponentIds": Array [],
                    "render": [Function],
                    "styledComponentId": "sc-jTzLTM",
                    "target": [Function],
                    "toString": [Function],
                    "warnTooManyClasses": [Function],
                    "withComponent": [Function],
                  }
                }
                dataLocator="email_gym_opt"
                id="emailSignupSecondBrand"
                name="emailSignupSecondBrand"
                type="checkbox"
              />
              <Styled(BodyCopy)
                className="terms-label"
                color="text.primary"
                component="p"
                fontFamily="secondary"
                fontSize="fs12"
                fontWeight="regular"
                letterSpacing="normal"
                lineHeight="normal"
                link={null}
                textAlign="left"
              />
            </Styled(Col)>
            <Styled(Row)
              className="button-wrapper-form"
              fullBleed={true}
            >
              <Styled(Col)
                colSize={
                  Object {
                    "large": 6,
                    "medium": 4,
                    "small": 4,
                  }
                }
              >
                <Styled(Button)
                  buttonVariation="fixed-width"
                  className="join-button"
                  dataLocator="join_now_btn"
                  disabled={false}
                  fill="BLUE"
                  fullWidth={true}
                  type="submit"
                />
              </Styled(Col)>
            </Styled(Row)>
          </Styled(Col)>
        </Styled(Row)>
      </Styled(Grid)>
    </form>
  </Styled(Modal)>
</Fragment>
`;

exports[`EmailSignupModal component renders correctly when button is clicked 2`] = `
<Fragment>
  <Styled(Modal)
    aria={
      Object {
        "describedby": "sign-up-modal-form-intro-view",
      }
    }
    className=""
    closeIconDataLocator="email_signup_modal_close_btn"
    colSet={
      Object {
        "large": 8,
        "medium": 6,
        "small": 6,
      }
    }
    contentLabel="undefined undefined"
    contentRef={[Function]}
    heightConfig={
      Object {
        "height": "645px",
        "maxHeight": "645px",
        "minHeight": "500px",
      }
    }
    isOpen={true}
    noPadding={true}
    onRequestClose={[Function]}
    overlayClassName="TCPModal__Overlay"
    widthConfig={
      Object {
        "large": "851px",
        "medium": "458px",
        "small": "100%",
      }
    }
  >
    <form>
      <Styled(Grid)>
        <Styled(Row)
          className="wrapper"
          fullBleed={
            Object {
              "large": true,
            }
          }
        >
          <Styled(Col)
            className="img-wrapper"
            colSize={
              Object {
                "large": 4,
                "medium": 4,
                "small": 4,
              }
            }
            hideCol={
              Object {
                "medium": true,
                "small": true,
              }
            }
            isNotInlineBlock={true}
          >
            <WithTheme(DamImage)
              imgConfigs={
                Array [
                  "t_emailSignUp_img_m",
                  "t_emailSignUp_img_t",
                  "t_emailSignUp_img_d",
                ]
              }
              imgData={
                Object {
                  "alt": undefined,
                  "url": undefined,
                }
              }
            />
          </Styled(Col)>
          <Styled(Col)
            colSize={
              Object {
                "large": 8,
                "medium": 8,
                "small": 6,
              }
            }
          >
            <Styled(SignupFormIntro)
              formViewConfig={Object {}}
            />
            <Styled(Col)
              className="field-container"
              colSize={
                Object {
                  "large": 10,
                  "medium": 6,
                  "small": 6,
                }
              }
              offsetLeft={
                Object {
                  "large": 1,
                  "medium": 1,
                  "small": 0,
                }
              }
            >
              <Field
                component={
                  Object {
                    "$$typeof": Symbol(react.forward_ref),
                    "attrs": Array [],
                    "componentStyle": ComponentStyle {
                      "componentId": "sc-dnqmqq",
                      "isStatic": false,
                      "rules": Array [
                        "
  ",
                        "
  position: relative;
  display: block;

  .TextBox__label {
    font-size: ",
                        [Function],
                        "px;
    padding: 0;
    position: absolute;
    top: ",
                        [Function],
                        ";
    ",
                        [Function],
                        "
  }

  .TextBox__input {
    margin: 0;
    outline: 0;
    font-size: ",
                        [Function],
                        "px;
    color: ",
                        [Function],
                        ";
    width: 100%;
    background-position: left top;
    background-repeat: no-repeat;
    background-size: contain;
    border: 0 solid transparent;
    border-bottom: 1px solid ",
                        [Function],
                        ";
    padding-bottom: ",
                        [Function],
                        ";
    margin-bottom: ",
                        [Function],
                        ";
    padding-top: ",
                        [Function],
                        ";

    ",
                        [Function],
                        "

    ",
                        [Function],
                        ";

    &:focus + .TextBox__label {
      font-size: ",
                        [Function],
                        "px;
      font-weight: ",
                        [Function],
                        ";
      top: ",
                        [Function],
                        ";
    }
  }
  .success__checkmark {
    display: none;
  }
  &.textbox_validation_success .TextBox__input {
    border-bottom: 1px solid ",
                        [Function],
                        ";
  }

  &.textbox_validation_success .success__checkmark {
    display: ",
                        [Function],
                        ";
    width: 15px;
    height: 8px;
    margin-left: ",
                        [Function],
                        ";
    transform: rotate(-45deg);
    transform-origin: left;
    position: absolute;
    right: 0;
    top: 30px;

    &:before {
      content: '';
      position: absolute;
      width: 3px;
      height: 100%;
      background-color: ",
                        [Function],
                        ";
    }

    &:after {
      content: '';
      position: absolute;
      width: 100%;
      height: 3px;
      background-color: ",
                        [Function],
                        ";
      bottom: 0;
    }
  }

  ",
                        [Function],
                        ";

  .TextBox__error {
    display: flex;
    flex-direction: row;
    padding-bottom: ",
                        [Function],
                        ";
  }
  .warning-icon {
    background: transparent url('/static/images/circle-alert-fill.svg') no-repeat 0 0;
    background-size: contain;
    border: none;
    height: 14px;
    width: 16px;
    margin-right: 7px;
  }
",
                        ";
",
                      ],
                    },
                    "displayName": "Styled(TextBox)",
                    "foldedComponentIds": Array [],
                    "render": [Function],
                    "styledComponentId": "sc-dnqmqq",
                    "target": [Function],
                    "toString": [Function],
                    "warnTooManyClasses": [Function],
                    "withComponent": [Function],
                  }
                }
                dataLocator="email_address_field"
                enableSuccessCheck={false}
                id="modal_signup"
                maxLength={50}
                name="signup"
                type="text"
              />
              <Field
                className="email-signup-second-brand"
                component={
                  Object {
                    "$$typeof": Symbol(react.forward_ref),
                    "attrs": Array [],
                    "componentStyle": ComponentStyle {
                      "componentId": "sc-jTzLTM",
                      "isStatic": false,
                      "rules": Array [
                        "
  ",
                        "
  display: block;
  align-items: ",
                        [Function],
                        ";

  & .CheckBox__input {
    flex: 0 0 auto;
    position: relative;
    top: 0;
    appearance: none;
    outline: 0;
    border: 0;
    height: ",
                        "25px",
                        ";
    width: ",
                        "25px",
                        ";
    margin: 0;
    margin-right: ",
                        [Function],
                        ";
    display: inline-block;
    vertical-align: top;
  }

  & .CheckBox__input:before {
    content: '';
    position: absolute;
    height: 100%;
    width: 100%;
    left: 0;
    border: 1px solid ",
                        [Function],
                        ";
  }

  & .CheckBox__input:checked:before {
    background: ",
                        [Function],
                        ";
    border: 1px solid ",
                        [Function],
                        ";
  }

  & .CheckBox__input:checked:after {
    transform: rotate(225deg);
    content: '';
    border: 2px solid ",
                        [Function],
                        ";
    font-size: ",
                        [Function],
                        "px;
    width: ",
                        [Function],
                        ";
    height: 10px;
    border-right: 0;
    border-bottom: 0;
    left: 10px;
    top: 5px;
    position: absolute;
  }

  & .CheckBox__text {
    width: calc(100% - 45px);
    display: inline-block;
    ",
                        [Function],
                        "
  }

  & .CheckBox__text a {
    color: ",
                        [Function],
                        ";
  }

  & .disabled {
    opacity: ",
                        [Function],
                        ";
  }

  & .Checkbox__error {
    display: flex;
    flex-direction: row;
    padding-left: ",
                        [Function],
                        ";
  }
  & .warning-icon {
    background: transparent url('/static/images/circle-alert-fill.svg') no-repeat 0 0;
    background-size: contain;
    border: none;
    height: ",
                        [Function],
                        ";
    width: ",
                        [Function],
                        ";
    margin-right: 4px;
    margin-top: 2px;
  }
  & #checkbox__error__iAgree {
    margin-top: 4px;
  }
",
                        ";
",
                      ],
                    },
                    "displayName": "Styled(InputCheckbox)",
                    "foldedComponentIds": Array [],
                    "render": [Function],
                    "styledComponentId": "sc-jTzLTM",
                    "target": [Function],
                    "toString": [Function],
                    "warnTooManyClasses": [Function],
                    "withComponent": [Function],
                  }
                }
                dataLocator="email_gym_opt"
                id="emailSignupSecondBrand"
                name="emailSignupSecondBrand"
                type="checkbox"
              />
              <Styled(BodyCopy)
                className="terms-label"
                color="text.primary"
                component="p"
                fontFamily="secondary"
                fontSize="fs12"
                fontWeight="regular"
                letterSpacing="normal"
                lineHeight="normal"
                link={null}
                textAlign="left"
              />
            </Styled(Col)>
            <Styled(Row)
              className="button-wrapper-form"
              fullBleed={true}
            >
              <Styled(Col)
                colSize={
                  Object {
                    "large": 6,
                    "medium": 4,
                    "small": 4,
                  }
                }
              >
                <Styled(Button)
                  buttonVariation="fixed-width"
                  className="join-button"
                  dataLocator="join_now_btn"
                  disabled={false}
                  fill="BLUE"
                  fullWidth={true}
                  type="submit"
                />
              </Styled(Col)>
            </Styled(Row)>
          </Styled(Col)>
        </Styled(Row)>
      </Styled(Grid)>
    </form>
  </Styled(Modal)>
</Fragment>
`;
